@startuml

package Presentation {
    class SelectJobRequirementSpecificationUI
}

package Domain {
    class JobOpening
}

package Persistence {
    class JpaJobOpeningRepository
    interface JobOpeningRepository
}

package JobOpening {
    class SelectJobRequirementSpecificationController
    class PluginLoader
}



Presentation.SelectJobRequirementSpecificationUI --> JobOpening.SelectJobRequirementSpecificationController
JobOpening.SelectJobRequirementSpecificationController --> Persistence.JobOpeningRepository
Persistence.JobOpeningRepository <|-- Persistence.JpaJobOpeningRepository
JobOpening.SelectJobRequirementSpecificationController ---> Domain.JobOpening
JobOpening.SelectJobRequirementSpecificationController ---> JobOpening.PluginLoader


@enduml